# LAP_Cliente

./: .gitignore  LAP.py  README.md  _test.py  main.lat  main.py  pyproject.toml  requirements.txt  setup.py
LAP/: __main__.py
LAP/modulos/: paqadm.py  repoadm.py
modulos/: paqadm.py  repoadm.py
modulos/aux/: get.sh  obtener_lista.sh
