[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="LAP-latino-client"
version = "0.0.31"
authors = [
  { name="Alvaro Martinez", email="alvarom12098@gmail.com" },
]
description = "Administrador de paquetes de latino (LAP)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Natural Language :: Spanish",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
"Homepage" = "https://github.com/N3koSempai/LAP_Cliente"
"Bug Tracker" = "https://github.com/N3koSempai/LAP_Cliente/issues"
